--- a/places-react/src/app/globals.css
+++ b/places-react/src/app/globals.css
@@ -1,26 +1,58 @@
 @import 'tailwindcss';
 
 :root {
-    --background: #ffffff;
-    --foreground: #171717;
-}
+    --accent: var(--color-red-800);
 
-@theme inline {
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
+    --layer-0: var(--color-g-100);
+    --layer-1: var(--color-white);
+
+    --line: var(--color-g-200);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
+        --accent: var(--color-red-700);
+
+        --layer-0: var(--color-g-950);
+        --layer-1: var(--color-g-900);
+
+        --line: var(--color-g-800);
     }
 }
 
-body {
-    background: var(--background);
-    color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+@theme inline {
+    --color-g-50: #fafafa;
+    --color-g-100: #f4f4f5;
+    --color-g-200: #e4e4e7;
+    --color-g-300: #d4d4d8;
+    --color-g-400: #a1a1aa;
+    --color-g-500: #71717a;
+    --color-g-600: #52525b;
+    --color-g-700: #3f3f46;
+    --color-g-800: #27272a;
+    --color-g-900: #18181b;
+    --color-g-950: #09090b;
+
+    --color-accent: var(--accent);
+
+    --color-line: var(--line);
+
+    --color-layer-0: var(--layer-0);
+    --color-layer-1: var(--layer-1);
+
+    --height-screen: 100vh 100dvh;
+    --min-height-screen: 100vh 100dvh;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+:root::-webkit-scrollbar,
+*::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+:root,
+* {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
